# Decors3D

./: .gitignore
inpainteam/: .gitignore  CMakeLists.txt  README.md
inpainteam/src/: ApplicationInpainting.cpp  ApplicationInpainting.h  ApplicationInpaintingThomas.cpp  ApplicationInpaintingThomas.h  CMakeLists.txt  Frame.cpp  Frame.h  FrameAnnotator.h  Segmentation.cpp  Segmentation.h  Tools.cpp  Tools.h  Video.cpp  Video.h  VideoPlayer.cpp  VideoPlayer.h  main.cpp
inpainteam/src/entities/: DistanceMap.cpp  DistanceMap.h  ExtendedPoint.cpp  ExtendedPoint.h  Frame.cpp  Frame.h  PointTrace.cpp  PointTrace.h  Video.cpp  Video.h
inpainteam/src/frame-annotator/: FrameAnnotator.cpp  FrameAnnotator.h  HomographyAnnotator.cpp  HomographyAnnotator.h  KeyPointFrameAnnotator.cpp  KeyPointFrameAnnotator.h  PipelineFrameAnnotator.cpp  PipelineFrameAnnotator.h  ResizeFrameAnnotator.cpp  ResizeFrameAnnotator.h  TraceFrameAnnotator.cpp  TraceFrameAnnotator.h
inpainteam/src/frame-processor/: CombineProcessor.cpp  CombineProcessor.h  DoubleFrameProcessor.cpp  DoubleFrameProcessor.h  FrameProcessor.cpp  FrameProcessor.h  HomographyEstimatorProcessor.h  KeyPointProcessor.cpp  KeyPointProcessor.h  KeyPointTraceProcessor.cpp  KeyPointTraceProcessor.h  SceneTraceClassifierProcessor.cpp  SceneTraceClassifierProcessor.h
inpainteam/src/processor/: CoordinateConverter.cpp  CoordinateConverter.h  DoubleFrameProcessor.cpp  DoubleFrameProcessor.h  FlowTraceProcessor.cpp  FlowTraceProcessor.h  FrameProcessor.cpp  FrameProcessor.h  HomographyEstimatorProcessor.cpp  KeyPointProcessor.cpp  (+13 more)
(+68 files in other folders)
